Adapt the PR to 7.x